# Next-Gen-Support-Agent-Blueprint

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml
app/: main.py  pyproject.toml
app/core/: agent.py  config.py  retriever.py  security.py  tools.py
scripts/: ingest.py
ui/: Dockerfile  main.py
