[project]
name = "app"
version = "0.1.0"
description = "The backend API for the Next-Gen Support Agent"
authors = [
    {name = "Yunus Emre Gültepe",email = "yemregultepe@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
# We will add tools like pytest here later

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
